// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-jnhPJk fHjApr"
>
  <input
    checked={true}
    className="sc-DRkuH bugQPy"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-evXUcO aecoS"
  >
    <span
      className="sc-bQtnlh dQCJmR"
    >
      <div
        checked={true}
        className="sc-fIzWTo garXIK"
      />
    </span>
    <p
      className="sc-hYufOg ddRnfV"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-jnhPJk fHjApr"
>
  <input
    className="sc-DRkuH bugQPy"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-evXUcO aecoS"
  >
    <span
      className="sc-bQtnlh dQCJmR"
    >
      <div
        checked={false}
        className="sc-fIzWTo jVmhYf"
      />
    </span>
    <p
      className="sc-hYufOg ddRnfV"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-jnhPJk fHjApr"
>
  <input
    className="sc-DRkuH bugQPy"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-evXUcO aecoS"
  >
    <span
      className="sc-bQtnlh dQCJmR"
    >
      <div
        checked={false}
        className="sc-fIzWTo jVmhYf"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-jnhPJk fHjApr"
>
  <input
    className="sc-DRkuH bugQPy"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-evXUcO aecoS"
  >
    <span
      className="sc-bQtnlh dQCJmR"
    >
      <div
        checked={false}
        className="sc-fIzWTo jVmhYf"
      />
    </span>
    <p
      className="sc-hYufOg ddRnfV"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-jnhPJk fHjApr"
>
  <input
    className="sc-DRkuH bugQPy"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-evXUcO aecoS"
  >
    <span
      className="sc-bQtnlh dQCJmR"
    >
      <div
        checked={false}
        className="sc-fIzWTo jVmhYf"
      />
    </span>
    <p
      className="sc-hYufOg ddRnfV"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
